# farm-chat

chainlit-groq-demo/: .env.docker.template  .env.example  .gitignore  ASSET_LOADING_STATUS.md  COPILOT_INTEGRATION_COMPLETE.md  DASHBOARD_TEMPLATE_UPDATE.md  DEMO_CHECKLIST.md  DEMO_LIVE.md  DEPLOYMENT.md  DEPLOYMENT_OPTIONS.md  Dockerfile  INTEGRATION_TEST_RESULTS.md  PROJECT_OVERVIEW.md  README.md  REFACTORING_SUMMARY.md  deploy_demo.sh  deploy_production.sh  docker-compose.prod.yml  docker-compose.yml  nginx-minimal.conf  nginx-simple.conf  nginx.conf  nginx.conf.backup  ngrok_deploy.sh  pyproject.toml  render.yaml  requirements.txt  restart_copilot.sh  start_stack.sh  test_imports.py
chainlit-groq-demo/farm_control_demo.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chainlit-groq-demo/src/: app.py  chainlit.md  farm_control_server.py  groq_llm.py
chainlit-groq-demo/src/llm_models/: voice_model.py
chainlit-groq-demo/src/models/: models.py
chainlit-groq-demo/src/services/: dynAlertSetter.py  farm_control_service.py
chainlit-groq-demo/src/thingsboard-with-copilot/: Dockerfile  app.py
chainlit-groq-demo/src/thingsboard-with-copilot/copilot/: index.js
chainlit-groq-demo/src/thingsboard-with-copilot/templates/: dashboard_with_copilot.html
chainlit-groq-demo/src/utils/: chainlit_voice_integration.py  thingsboard.py  voice_utils.py
chainlit-groq-demo/tests/: test_voice_utils.py
