[project]
name = "farm-control-demo"
version = "1.0.0"
description = "Farm Control Demo with Chainlit and GROQ API"
requires-python = ">=3.10"

dependencies = [
    "chainlit>=1.0.0",
    "groq>=0.9.0",
    "mcp==1.9.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.6.1",
    "typing-extensions>=4.9.0",
    "sqlalchemy>=2.0.25",
    "requests>=2.31.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["app", "farm_control_server"]
